fix: overflow in mobile

--- a/src/app/post/[id]/index.css
+++ b/src/app/post/[id]/index.css
@@ -1,6 +1,5 @@
 .Post-Wrap {
   display: flex;
-  justify-content: center;
   position: relative;
 }
 
