--- a/src/components/app/Toc/index.css
+++ b/src/components/app/Toc/index.css
@@ -1,24 +1,12 @@
 .Toc-Wrap {
-  width: 240px;
-  margin-left: 220px;
   align-self: stretch;
+  width: 180px;
 }
 
 .Toc {
   position: sticky;
-  top: 10%;
+  top: 13%;
   padding: 12px;
-  border-radius: 6px;
-}
-
-.Toc::before {
-  content: '';
-  position: absolute;
-  left: -8px;
-  top: 15%;
-  bottom: 15%;
-  width: 2px;
-  background-color: var(--blog-color-lighter);
 }
 
 .Toc-Title {
